:alien: New methods search projects

--- a/package.json
+++ b/package.json
@@ -1,14 +1,10 @@
 {
   "name": "okapi-projects-submitter",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "A tool for submit missing project for okapi.",
   "scripts": {
-    "start": "bun run src/index.ts",
     "search": "bun run src/search.ts",
-    "create": "bun run src/create.ts",
-    "convert": "bun run src/convert.ts",
-    "test": "bunx playwright test",
-    "build": "bun build src/index.ts --outdir ./dist --target node"
+    "create": "bun run src/create.ts"
   },
   "repository": {
     "type": "git",
@@ -23,11 +19,9 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "@playwright/test": "^1.40.1",
     "@types/json2csv": "^5.0.7",
     "json2csv": "^6.0.0-alpha.2",
     "okapi-xyz-sdk": "^0.0.1",
-    "playwright": "latest",
-    "rootdata": "^0.0.2"
+    "rootdata": "^0.1.0"
   }
 }
