--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "okapi-projects-submitter",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "A tool for submit missing project for okapi.",
   "scripts": {
     "search": "bun run src/search.ts",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/script-money/okapi-projects-submitter.git"
+    "url": "https://github.com/script-money/okapi-projects-submitter"
   },
   "author": "script-money",
   "license": "MIT",
